--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,14 @@
   {% endif %}
   
   {% set description = config.description %}
+
+  {% if config.title_icon %}
+    {% set title_icon = config.title_icon %}
+  {% else %}
+    {% set title_icon = "" %}
+  {% endif %}
   
-  {{ macros_head::seo(title=title, title_addition=title_addition, description=description, is_home=true) }}
+  {{ macros_head::seo(title=title, title_icon=title_icon, title_addition=title_addition, description=description, is_home=true) }}
 {% endblock seo %}
 
 {% block content %}
@@ -28,6 +34,7 @@
     <section class="section container-fluid mt-n3 pb-3">
       <div class="row justify-content-center">
         <div class="col-lg-12 text-center">
+          <h1 class="mt-0">{{ section.extra.title_ | default(value="Hello") | safe }}</h1>
           <h1 class="mt-0">{{ section.title | default(value="Modern Documentation Theme") }}</h1>
         </div>
         <div class="col-lg-9 col-xl-8 text-center">
